--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap-icons": "^1.10.3"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1"
   }
 }
